k8s/apps/falco/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: falco
  namespace: falco
  labels:
    app: falco
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "8765"
    prometheus.io/path: "/metrics"
spec:
  clusterIP: None
  ports:
    - name: metrics
      port: 8765
      targetPort: metrics
      protocol: TCP
  selector:
    app: falco
